--- a/text/content.tex
+++ b/text/content.tex
@@ -2,23 +2,23 @@
 %%
 
 \chapter{Stand der Forschung}
-In diesem Kapitel wollen wir den aktuellen Stand der Wissenschaft vorstellen. Hierbei beziehen wir uns auf das Thema Lernen. Welches Wissen gibt es hierbei bereits und auf welchem Stand sind diese? Das wollen wir in diesem Kapitel klären, bevor es zu den Grundlagen dieser Arbeit kommt.
+In diesem Kapitel wollen wir den aktuellen Stand der Wissenschaft vorstellen. Hierbei beziehen wir uns auf das Thema Lernen. Welches Wissen gibt es hierbei bereits und auf welchem Stand sind diese? Das wollen wir in diesem Kapitel klären, bevor die Grundlagen der Arbeit erläutert werden.
 
 \section{Lernen}
-Das Thema Lernen ist ein wichtiger Bestandteil dieser Arbeit. Aus diesem Grund wollen wir uns bevor wir unsere Problemstellung einsteigen mit dem aktuellen Stand des Lernens befassen, so dass bei unseren Lösungsansätzen das Lernen später besser begründet werden kann.
+Das Thema Lernen ist ein wichtiger Bestandteil dieser Arbeit. Aus diesem Grund wollen wir uns mit dem aktuellen Stand des Lernens befassen, so dass bei unseren Lösungsansätzen das Lernen besser begründet werden kann.
 
 
 \subsection{Problembasiertes Lernen}
-"Problem based Lerning (PBL) is a learner-centred approach for designing learning environments in authentic, ill-structured problems" entnommen aus \cite{zumbachproblembasiertes}. \par
+"Problem based Lerning (PBL) is a learner-centred approach for designing learning environments in authentic, ill-structured problems" entnommen aus \cite{problembasiertes}. \par
 
 Das Problembasierte Lernen, wie im Zitat deutlich wird, bezieht sich auf das Erarbeiten von selbstständigen Lösungsansätzen zum Lösen eines Problems. Der Lernende soll ein Thema selbstständig erarbeiten, ohne das jemand anderes einen Lösungsweg vorzeichnet. Auf dem Weg zu der Lösung eines Problems muss er evtl. mehrere Ansätze probieren um sein Ziel zu erreichen. Wie im Zitat bereits erwähnt steht der Lernende im Mittelpunkt. Der Lernende muss hierbei selbst die Initiative ergreifen. Ein Lehrer steht beim Lernprozess nur als Helfende Hand zur Seite. Er dient dabei lediglich als Coach, der evtl. aufkommende Fragen des Lernenden beantwortet und ihn in eine spezielle Richtung leitet, falls der Lernende nicht mehr weiterkommt. Beim Thema Software haben wir eine ähnliche Problemstellung. Ein möglicher Anwender kommt an einem Punkt in der Software nicht mehr weiter und muss selbstständig eine Lösung für das konkrete Problem finden. 
  
 \subsection{Differenzielles Lernen}
-Ein weitere Ansatz zum Thema Lernen gibt es in der Sporttheorie. Die Idee des differenziellen Lernens bezieht sich auf das Erlernen von Bewegungen im Sport. Beim differenziellen Lernen werden Bewegungen variiert. Beim Tischtennis beispielsweise wird ein Schlag auf verschiedene Wege durchgeführt. Hierbei werden vor allem Körperwinkel variiert. \footnote{Quelle: \cite{differenziellesLernen}} Es werden drei Bälle vom Lernenden gespielt und jede Bewegung sollte hierbei auf einem anderen Weg durchgeführt werden. Das Ziel dieser Form von Lernen ist es kein ideales Technikleitbild für eine Bewegung vorzugeben, also keine Lösung sondern die Bewegung so vielfältig wie möglich zu streuen. Wenn er dieses Training durchführt, dann kann ein Lernender in jeder Situation die korrekte Bewegung anwenden. Diese Form des Bewegungslernens ist sehr stark verwandt mit dem problembasierten Ansatz. Das Differenzielle Lernen gibt ebenfalls ein Problemstellung vor, die mit verschiedenen Lösungswegen gelöst werden soll. Der Unterschied hierbei besteht in der Vorgabe von Lösungsansätzen im Vergleich zum komplett selbständigen problematisierten Lernen. Von einem Lehrer wird ein konkretes Problem vorgegeben. Dieses Problem soll im Anschluss auf verschiedene Wege gelöst werden. Durch die Differenzierung entsteht ein grobes Bild im Kopf, wie ein Lösungsansatz aussehen soll. Im Techniktraining im Sport zum Beispiel wie eine konkrete Technik im Sport aussehen soll. Wenn es in Zukunft zu einem solchen Problem kommt, so kann der Lernende aus verschiedenen Lösungsmöglichkeiten die passende auswählen. Diese Möglichkeit gibt es bei der Bedienung von Software auch. Hier ist es ebenfalls möglich eine konkrete Problemstellung, wie beispielsweise das Anlegen eines Adressdatensatzes auf verschiedene Wege zu lösen. Aus diesem Grund ist der differenzielle Lernansatz in unserer Arbeit interessant.
+Ein weitere Ansatz zum Thema Lernen gibt es in der Sporttheorie. Die Idee des differenziellen Lernens bezieht sich auf das Erlernen von Bewegungen im Sport. Beim differenziellen Lernen werden Bewegungen variiert. Beim Tischtennis beispielsweise wird ein Schlag auf verschiedene Wege durchgeführt. Hierbei werden vor allem Körperwinkel variiert. \footnote{Quelle: \cite{differenziellesLernen}} Es werden drei Bälle vom Lernenden gespielt und jede Bewegung sollte hierbei auf einem anderen Weg durchgeführt werden. Das Ziel dieser Form von Lernen ist es kein ideales Technikleitbild für eine Bewegung vorzugeben, also keine Lösung sondern die Bewegung so vielfältig wie möglich zu streuen. Wenn er dieses Training durchführt, dann kann ein Lernender in jeder Situation die korrekte Bewegung anwenden. Diese Form des Bewegungslernens ist sehr stark verwandt mit dem problemorientierten Ansatz. Das Differenzielle Lernen gibt ebenfalls ein Problemstellung vor, die mit verschiedenen Lösungswegen gelöst werden soll. Der Unterschied hierbei besteht in der Vorgabe von Lösungsansätzen im Vergleich zum komplett selbständigen problematisierten Lernen. Von einem Lehrer wird ein konkretes Problem vorgegeben. Dieses Problem soll im Anschluss auf verschiedene Wege gelöst werden. Durch die Differenzierung entsteht ein grobes Bild im Kopf, wie ein Lösungsansatz aussehen soll. Im Techniktraining im Sport zum Beispiel wie eine konkrete Technik im Sport aussehen soll. Wenn es in Zukunft zu einem solchen Problem kommt, so kann der Lernende aus verschiedenen Lösungsmöglichkeiten die passende auswählen. Diese Möglichkeit gibt es bei der Bedienung von Software auch. Hier ist es ebenfalls möglich eine konkrete Problemstellung, wie beispielsweise das Anlegen eines Adressdatensatzes auf verschiedene Wege zu lösen. Aus diesem Grund ist der differenzielle Lernansatz in unserer Arbeit interessant.
 
 
 \section{Game-Based Learning}
-Ein aktueller Ansatz um schnell neue Inhalte zu Lernen ist das sogenannte "Game-Based Learning". Dieser Ansatz geht von einem spielerischen Lernen aus. Neue Lerninhalte werden in einem digitalen Spiel aufbereitet. Digitale Spiele sind nach Wagner /cite{wag} ein regelbasiertes,
+Ein aktueller Ansatz um schnell neue Inhalte zu Lernen ist das sogenannte "Game-Based Learning". Dieser Ansatz geht von einem spielerischen Lernen aus. Neue Lerninhalte werden in einem digitalen Spiel aufbereitet. Digitale Spiele sind nach Wagner /cite{} ein regelbasiertes,
 interaktives Medium, das Spielende „emotional bindet und innerhalb eines von der objektiven Realität abgegrenzten Raums stattfindet“ und dessen „zugrunde liegende Interaktionstechnologie rein digitaler Natur ist“. Dieser Ansatz verspricht Spaß beim Lernen von neuen Inhalten. Dieser Spaß fördert das kreative Denken und hilft neue Lerninhalte einfacher zu verstehen und vor allem besser behalten und verinnerlichen zu können. 
 
 
@@ -30,7 +30,7 @@ Um ein besseres Verständnis dieser Arbeit zu gewährleisten, sind gewisse Grund
 \section{Online-Lernhilfe}
 Wir werden eine kurze Begriffsdefinition geben und anschließend die Verwendung in unserer Arbeit erläutern. Dies hilft beim Verständnis des Problems.
 \subsection{Begriffsdefinition}
-Die Online-Lernhilfe setzt sich aus zwei Begriffen zusammen, der Online-Hilfe und der Lernhilfe. Die Online-Hilfe bezeichnet eine „\textit{Hilfefunktion, die nur über eine direkte Verbindung mit dem Internet genutzt werden kann}“ \cite{dud1}. Die Lernhilfe beschreibt eine „\textit{Hilfe, Mittel oder Anhaltspunkt beim Lernen von etwas}“ \cite{dud2}. Somit ist die Online-Lernhilfe ein Hilfe-, Mittel- oder Anhaltspunkt, der eine Verbindung mit dem Internet voraussetzt.
+Die Online-Lernhilfe setzt sich aus zwei Begriffen zusammen, der Online-Hilfe und der Lernhilfe. Die Online-Hilfe bezeichnet eine „\textit{Hilfefunktion, die nur über eine direkte Verbindung mit dem Internet genutzt werden kann}“ \cite{onlinehilfe}. Die Lernhilfe beschreibt eine „\textit{Hilfe, Mittel oder Anhaltspunkt beim Lernen von etwas}“ \cite{lernhilfe}. Somit ist die Online-Lernhilfe ein Hilfe-, Mittel- oder Anhaltspunkt, der eine Verbindung mit dem Internet voraussetzt.
 
 \subsection{Verwendung in der Arbeit}
 Unter Online-Hilfen verstehen wir die klassischen Hilfsmodule von Software. Diese bietet dem Nutzer Hilfe zu einem bestimmten Themengebiet in der Software. Die klassische Form ist ein Handbuch das zu der Software beigelegt wird. Dieses Handbuch erklärt die Software mit ihren Funktionen. Früher waren die Handbücher sehr umfangreich, so dass man zuerst mehrere Seiten dieses Handbuch lesen musste, um die Software überhaupt erst verstehen zu können. Heutzutage sind die Benutzeroberflächen vereinfacht, so dass die Software im Idealfall selbsterklärend ist und keine weitere Hilfestellung notwendig. Das Software immer mehr Prozesse abbilden kann, wird die Komplexität einer Software jedoch immer zunehmen. Damit die Komplexität weiterhin von einem User bedient werden kann, muss er zum einen neue Bedienelemente einer Software lernen und zum Anderen eine schnelle Hilfe erhalten, wenn er an einem bestimmten Punkt in der Software nicht weiterkommt.
@@ -40,7 +40,7 @@ Unter Online-Hilfen verstehen wir die klassischen Hilfsmodule von Software. Dies
 Wie aus dem Titel unserer Arbeit ersichtlich, benötigen wir eine Definition des Adaptions-Begriffs, um unsere Arbeitsgebiete klar abzugrenzen.
 
 \subsection{Begriffserläuterung}
-Unter dem Begriff Adaption, welcher von dem lateinischen Wort „\textit{adaptare}“ stammt und „\textit{anpassen}“ bzw. „\textit{passend}“ herrichten \cite{dud3} bedeutet, versteht man die Anpassung eines Objekts an einen Zweck. 
+Unter dem Begriff Adaption, welcher von dem lateinischen Wort „\textit{adaptare}“ stammt und „\textit{anpassen}“ bzw. „\textit{passend}“ herrichten \cite{adaptieren} bedeutet, versteht man die Anpassung eines Objekts an einen Zweck. 
 
 \section{Adaption an den Nutzer}
 Der Begriff der Adaption ist sehr breit auf den Bereich Online-Lernhilfe anwendbar. Eine Adaption ist deshalb an sehr vielen Stellen möglich. Aus diesem Grund wurde in Absprache mit den Betreuern festgestellt, dass die Lösungsvorschläge nur eine Adaption an den Nutzer beinhalten sollen.Eine Adaption an verschiedene Endgeräte, wie Tablets, Smartphones oder Computer sollen deshalb aus der Betrachtung und Bewertung ausgeschlossen werden. Lösungsvorschläge, welche im Verlauf der Arbeit vorgestellt werden und adaptiv sind, stellen folglich ausschließlich eine Anpassung an den Nutzer dar. Darunter kann man sich zum Beispiel einen grafisch aufgearbeiteten Hilfetext für den Benutzer der Software vorstellen, der sich dynamisch an den derzeit verwendeten Teil der Software anpasst.
@@ -61,6 +61,14 @@ Ein Teil unseres Lösungsansätzes verwendet ein Recommendersystem.
 \subsection{Verwendung in unserer Arbeit}
 In unserer Arbeit wollen wir die Recommendersysteme in Form eines Expertensystems verwenden.  Der Experte kennt ein bestimmtes Gebiet der Software und generiert später die Empfehlung. Diese kann im Kontext des Lernens entweder ein Tipp zur Lösungsfindung sein oder aber auch die direkte Lösung zu einem Problem. Im Softwareumfeld kann dies besser differenziert werden. Entweder der Experte zeigt einen möglichen  Weg auf um das Problem zu beseitigen oder aber er erarbeitet mit dem Lernenden zusammen als Coach die Lösung des Problems. Diese beiden Möglichkeiten können mithilfe eines Recommendersystems begangen werden und werden in unserem dritten Lösungsansatz weiter vertieft.
 
+\section{Personas}
+Um eine Klassifizierung der Nutzer vornehmen zu können, müssen zuerst sogenannte Personas erstellt werden.
+
+\subsection{Begriffserläuterung}
+„Personas (lat. Maske) sind Nutzermodelle, die Personen einer Zielgruppe in ihren Merkmalen charakterisieren. Sie können z. B. einem Entwicklerteam aufgrund ihrer umfangreichen Beschreibung helfen, sich in die Lage der potenziellen Nutzer zu versetzen und diese Perspektive während des gesamten Designprozesses leicht zu vertreten.“ \cite{personas}
+
+\subsection{Verwendung in unserer Arbeit}
+Wir haben Personas in Absprache mit unseren Betreuern erstellt, um mögliche Rollen bei der Nutzung von CAS Campus herauszufiltern. Das primäre Ziel bei der Verwendung von Personas ist es, die Adaptivität auf den Nutzer klar herauszustellen.
 
 %% ===========================
 \chapter{Nutzer}
@@ -89,7 +97,7 @@ Eine weitere Rolle, die nicht missachtet werden sollte sind die Administratoren 
 Nachdem die einzelnen Personas vorgestellt wurden, folgt die Klassifizierung in verschiedene Nutzerklassen. Die Klassifizierung erfolgte anhand der in Abbildung \ref{img1:userRoles} sichtbaren Kriterien: schnelle, effektive Nutzung sowie lösungsorientierte und informationsorientierte Nutzung. Unter informationsinteressiert verstehen wir eine Nutzung der Software um an Informationen wie Stundenplan oder Rauminformation schnell zu gelangen. Diese Kriterien haben wir den jeweiligen Rollen zugeordnet. Durch die Verknüpfung in einem ungerichteten Graphen sind wir zu der Nutzerklassifizierung gekommen.
 \begin{figure}[ht]
 \begin{center}
-\includegraphics[width = 1.0\textwidth]{Nutzerklassifiizierung.png}
+\includegraphics[width = 1.0\textwidth]{Nutzerklassifizierung.jpg}
 \caption{Nutzerklassifizierung abgeleitet aus Nutzungskriterien}
 \label{img1:userRoles}
 \end{center}
@@ -114,15 +122,24 @@ Dieses Kapitel widmet sich den Lösungsansätzen, die als Grundlage für unsere 
 Abbildung \ref{img1:criteria} zeigt unsere Bewertungskriterien, die im Folgenden erläutert werden sollen.
 \begin{figure}[ht]
 \begin{center}
-\includegraphics[width = 1.0\textwidth]{Bewertungskriterien.png}
+\includegraphics[width = 1.0\textwidth]{Bewertungskriterien.jpg}
 \caption{Bewertungskriterien für die Lösungsansatzbewertung}
 \label{img1:criteria}
 \end{center}
 \end{figure} 
 
 \subsection{Begründung der Kriterien}
+Die Kriterien lassen sich grob in 2 Kategorien einteilen: wirtschaftliche und technische Kriterien. Zu den wirtschaftlichen Kriterien zählen die Kosten, die noch einmal in Anfangskosten und Wartungskosten unterteilt werden, und die Realisierbarkeit der einzelnen Lösungsansätze. Zu den technischen Kriterien haben wir die Wartbarkeit, den Datenschutz und die Usability gezählt.
 \subsection{Wirtschaftlich}
 \subsubsection{Anfangskosten}
+Unter den Anfangskosten verstehen wir die alle Kosten die anfallen, bis der Lösungsansatz in CAS Campus verfügbar und einsetzbar gemacht werden kann. Diese setzen sich aus Sachkosten und Personalkosten zusammen. Zu den Sachkosten zählen zum Beispiel die benötigte Hardware, Lizenzen für bestimmte Software, usw. Da bei der Softwareentwicklung aber der kosten treibende Faktor die Personalkosten sind, werden die Sachkosten im Folgenden nicht näher betrachtet. Hinzuzufügen ist, dass die Personalkosten sich am Aufwand des Projekts orientieren. Man spricht also von einem Personalaufwand für ein bestimmtes Projekt. Um diesen Personalaufwand zu abzuschätzen gibt es bereits verschiedene etablierte Methoden, die jedoch von verschiedenen Faktoren wie dem Vorgehensmodell (z.B. Wasserfallmodell vs. SCRUM) \cite{vorgehensmodelle} oder der Art der Schätzung (Einfache Schätztechniken wie zu erwartende Lines of Code (LOC) anhand von bekannten LOCs berechnen vs. Algorithmische Aufwandsschätzungen wie COCOMO) \cite{aufwand}. Generell kann man dazu aber sagen, dass eine Schätzung ungenauer wird, sofern sich der abzuschätzende Zeitraum vergrößert. Die lässt sich mit dem, in der Softwaretechnik anerkannten, sogenannten  Kegel der Unsicherheit (engl.  Cone of Uncertainty, siehe Abbildung \ref{img2:costs}) einfach darstellen. Dabei bildet die x-Achse die Phase eines Projekts und die y-Achse den relativen Aufwand eines Projekts ab.
+\begin{figure}[ht]
+\begin{center}
+\includegraphics[width = 1.0\textwidth]{anfangskosten.png}
+\caption{Kegel der Unsicherheit }
+\label{img2:costs}
+\end{center}
+\end{figure} 
 \subsubsection{Wartungskosten}
 \subsubsection{Nutzen}
 
@@ -143,11 +160,11 @@ Das klassische Hilfesystem soll unserer Klasse der Problemorientierten Nutzer we
 \begin{center}
 \includegraphics[width = 0.95\textwidth]{onlineHilfe.png}
 \caption{Klassischer Aufbau eines Hilfesystems}
-\label{img1:userRoles}
+\label{img1:helpSystem}
 \end{center}
 \end{figure} 
 \subsection{Erläuterung}
-Die klassische Hilfe entspricht, wie der Name bereits vermuten lässt, einem Hilfesystem wie man es bereits aus mehreren Programmen kennt. Ein Hilfesystem ist die „\textit{Gesamtheit an Informationen, die gegeben werden, um dem Benutzer beim Umgang mit [Anwendungs]programmen zu helfen}“ (Duden, 2015). Es handelt sich im Falle der Abbildung um ein Handbuch welches online abgerufen werden kann. Der Inhalt der Hilfe wird als grafisch aufbereiteter Text dargestellt und mit Bildausschnitten aus dem Programm ergänzt. Die aufgerufene Hilfeseite wird wie in Abbildung \ref{img2:helpSystem} auf der rechten Seite des Fensters dargestellt. Die linke Seite des Fensters enthält die einzelnen Hilfeseiten, nach Inhalt in diverse Kategorien geordnet. Eine Indexierung der Hilfeseiten ist ebenfalls vorhanden und lässt sich über einen weitere Registerkarte im linken Bereich einblenden. Die Suchfunktion nach Inhalt oder Indexeinträgen befindet sich in der Kopfzeile des Fensters. Diese Form der Hilfe bietet die Möglichkeit zu einem konkreten Problem die genaue Lösung zu erhalten. Dieser Ansatz funktioniert am Besten, wenn der Nutzer sein konkretes Problem kennt und auch entsprechend beschreiben kann. Dies ist bei Software sehr oft gegeben, was bedeutet ein Nutzer hängt gerade in einer Anwendung und weiß wonach er genau suchen muss.
+Die klassische Hilfe entspricht, wie der Name bereits vermuten lässt, einem Hilfesystem wie man es bereits aus mehreren Programmen kennt. Ein Hilfesystem ist die „\textit{Gesamtheit an Informationen, die gegeben werden, um dem Benutzer beim Umgang mit [Anwendungs]programmen zu helfen}“ (Duden, 2015). Es handelt sich im Falle der Abbildung um ein Handbuch welches online abgerufen werden kann. Der Inhalt der Hilfe wird als grafisch aufbereiteter Text dargestellt und mit Bildausschnitten aus dem Programm ergänzt. Die aufgerufene Hilfeseite wird wie in Abbildung \ref{img1:helpSystem} auf der rechten Seite des Fensters dargestellt. Die linke Seite des Fensters enthält die einzelnen Hilfeseiten, nach Inhalt in diverse Kategorien geordnet. Eine Indexierung der Hilfeseiten ist ebenfalls vorhanden und lässt sich über einen weitere Registerkarte im linken Bereich einblenden. Die Suchfunktion nach Inhalt oder Indexeinträgen befindet sich in der Kopfzeile des Fensters. Diese Form der Hilfe bietet die Möglichkeit zu einem konkreten Problem die genaue Lösung zu erhalten. Dieser Ansatz funktioniert am Besten, wenn der Nutzer sein konkretes Problem kennt und auch entsprechend beschreiben kann. Dies ist bei Software sehr oft gegeben, was bedeutet ein Nutzer hängt gerade in einer Anwendung und weiß wonach er genau suchen muss.
 
 \section{Lernspiel-App}
 Der zweite Lösungsansatz soll eine Lösung in Form einer sogenannten Lernspiel-App aufzeigen. Zuerst wird eine Begriffsdefinition von App durchgeführt bevor die konkrete Lösung vorgestellt wird.
