--- a/thesis.bib
+++ b/thesis.bib
@@ -1,16 +1,5 @@
-@ARTICLE{becker2008a,
-  author = {Steffen Becker and Heiko Koziolek and Ralf Reussner},
-  title = {{T}he {P}alladio component model for model-driven performance prediction},
-  journal = {JSS},
-  year = {2009},
-  volume = {82},
-  pages = {3--22},
-  doi = {10.1016/j.jss.2008.03.066},
-  publisher = {Elsevier Science Inc.},
-  url = {http://dx.doi.org/10.1016/j.jss.2008.03.066}
-}
 
-@book{zumbachproblembasiertes,
+@book{problembasiertes,
   title={Problembasiertes Lernen},
   author={Zumbach, J.},
   isbn={9783830963332},
@@ -18,13 +7,29 @@
   publisher={Waxmann Verlag}
 }
 
+@book{vorgehensmodelle,
+  title={Vorgehensmodelle kompakt},
+  author={Bunse, C., von Knethen, A.},
+  url={https://books.google.de/books?id=X47DrRaHJNkC},
+  publisher={Spektrum Akademischer Verlag}
+}
+
+@book{aufwand,
+  title={Aufwandsschätzungen in der Software- und Systementwicklung kompakt},
+  author={Hummel, O.},
+  year={2011},
+  volume={1.Hrsg.},
+  publisher={Spektrum Akademischer Verlag}
+}
+
 @Article{differenziellesLernen,
   author =       {Wolfgang I. Schöllhorn, Hendrik Beckmann, Daniel Janssen, Maren Michelbrink},
   title =        {Differenzielles Lehren und Lernen im Sport},
   year = 	{2009},
   month=	{Februar},
-  url={http://www.hofmann-verlag.de/project/zsarchiv/archiv/sportunterricht/2009/sportunterricht-Ausgabe-Februar-2009.pdf#page=6}
-   publisher =    {Sportunterricht Magazin},
+  url={http://www.hofmann-verlag.de/project/zsarchiv/archiv/sportunterricht/2009/sportunterricht-Ausgabe-Februar-2009.pdf#page=6},
+  pages ={Abruf am 16.07.2015},
+   publisher =    {Sportunterricht Magazin}
 }
 
 @Misc{recommender,
@@ -37,27 +42,94 @@ OPThowpublished = {Foliensatz zur Vorlesung Recommendersysteme}
   author =       {Bendel, P. D. O.},
   title =        {Gamification},
   year = 	{2015},
+   pages ={Abruf am 16.07.2015},
   url={http://wirtschaftslexikon.gabler.de/Archiv/688938796/gamification-v4.html}
 }
 
-@Article{dud1,
+@Article{lernen,
+  author =       {Maier, G. W., Bartscher},
+  title =        {Lernen},
+  year = 	{2015},
+   pages ={Abruf am 20.07.2015},
+  url={http://wirtschaftslexikon.gabler.de/Archiv/85222/lernen-v7.html}
+}
+
+@Article{personas,
+  author =       {onlinemarketing-praxis.de},
+  title =        {onlinemarketing praxis - Personas},
+  year = 	{2015},
+  pages ={Abruf am 20.07.2015},
+  url={http://www.onlinemarketing-praxis.de/glossar/personas}
+}
+
+@Article{coneOfUnc,
+  author =       {Brodd, M.},
+  title =        {Crisp's Blog - from the Crisp Consultants on Agile and Lean practices.},
+  year = 	{2015},
+  pages ={Abruf am 20.07.2015},
+  url={http://blog.crisp.se/wp-content/uploads/2011/12/Cone-of-uncertaintyNEW.jpg}
+}
+
+@Article{adaptieren,
   author =       {Duden},
   title =        {adaptieren},
   year = {2015},
+  pages ={Abruf am 20.07.2015},
   url={http://www.duden.de/node/687662/revisions/1384857/view}
 }
 
-@Article{dud2,
+@Article{deskriptor,
+  author =       {Duden},
+  title =        {adaptieren},
+  year = {2015},
+  pages ={Abruf am 20.07.2015},
+  url={http://www.duden.de/rechtschreibung/Deskriptor}
+}
+
+@Article{onlinehilfe,
   author =       {Duden},
   title =        {Onlinehilfe},
   year = 	{2015},
+  pages ={Abruf am 20.07.2015},
   url={http://www.duden.de/node/769414/revisions/1344323/view}
 }
 
-@Article{dud3,
+@Article{lernhilfe,
   author =       {Duden},
   title =        {Lernhilfe},
   year = {2015},
+  pages ={Abruf am 20.07.2015},
   url={http://www.duden.de/node/733105/revisions/1232018/view}
+}
+
+@Article{hilfesysteme,
+  author =       {InfoWissWiki},
+  title =        {InfoWissWiki - Hilfesysteme},
+  year = {2015},
+  pages ={Abruf am 20.07.2015},
+  url={http://wiki.infowiss.net/Hilfesysteme}
+}
+
+@Article{indexierung,
+  author =       {InfoWissWiki},
+  title =        {InfoWissWiki - Indexierung},
+  year = {2015},
+  pages ={Abruf am 20.07.2015},
+  url={http://wiki.infowiss.net/Indexierung}
+}
+
+@Article{verstaendlichkeit,
+  author =       {Jakobs, E.-M., Villiger, C.},
+  title =        {"Das versteht kein Mensch...". Verständlichkeitsprobleme in Online-Hilfesystemen},
+  year = {2015},
+  journal={In: E. Jakobs, K. Dagmar, K. Pogner, Hrsg. Textproduktion. Hypertext, Text, Kontext.. },
+  pages={211-228}
+}
+
+@Book{designingUi,
+  author =       {Shneiderman, B.},
+  title =        {Designing the User Interface - Strategies for Effective Human-Computer-Interaction},
+  year = {2005},
+  volume={4.Hrsg.}
 }
 
