--- a/thesis.tex
+++ b/thesis.tex
@@ -27,7 +27,7 @@
 % forget trailing slash '/'
 % \usepackage{epstopdf} %Nice to automatically convert eps figures to pdf
 % format  (from inkscape, etc)
-\usepackage{}
+% \usepackage{}
 
 
 %% ---------------------------------
@@ -171,7 +171,5 @@ text/appendix
 
 \bibliography{thesis}
 
-\vspace{2cm}
-** Vorschlag: Referenzen in APA\footnote{http://www.library.cornell.edu/resrch/citmanage/apa} Style. Das ist aber nicht Pflicht. Am besten mit Betreuer besprechen.
 
 \end{document}
